fix: adjust alignment and visibility of overflown content

--- a/src/views/components/GamePageList/GamePageList.module.scss
+++ b/src/views/components/GamePageList/GamePageList.module.scss
@@ -60,11 +60,16 @@
 		}
 
 		.PageSelection {
-			display    : flex;
-			flex-wrap  : nowrap;
-			gap        : 2vmin;
-			overflow-x : auto;
-			margin-inline: auto;
+			display       : flex;
+			flex-wrap     : nowrap;
+			gap           : 2vmin;
+			overflow-x    : auto;
+			margin-inline : auto;
+			width         : clamp(30vw, 100%, 50vw);
+
+			&::-webkit-scrollbar {
+				display : none;
+			}
 
 			button {
 				padding       : 1rem;
@@ -72,12 +77,6 @@
 				width         : 3rem;
 				height        : 3rem;
 				text-align    : center;
-			}
-
-			@media screen and (min-width : 40rem) {
-				& {
-					justify-content : center;
-				}
 			}
 		}
 	}
